<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/scoring_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/player_1"
                android:textColor="#616161"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:paddingTop="8dp"
                android:text="@string/sets"
                android:textColor="#000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/player1_sets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:text="@string/blank_score"
                android:textColor="@color/scoreColor"
                android:textSize="36sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:paddingTop="8dp"
                android:text="@string/games"
                android:textColor="#000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/player1_games"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:text="@string/blank_score"
                android:textColor="@color/scoreColor"
                android:textSize="36sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:paddingTop="8dp"
                android:text="@string/points"
                android:textColor="#000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/player1_points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:text="@string/blank_score"
                android:textColor="@color/scoreColor"
                android:textSize="36sp" />

            <Button
                android:id="@+id/player1_add_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:onClick="addPointForPlayer1"
                android:text="@string/won_point" />

            <Button
                android:id="@+id/player1_undo_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:onClick="removePointFromPlayer1"
                android:text="@string/undo_point" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/player_2"
                android:textColor="#616161"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:paddingTop="8dp"
                android:text="@string/sets"
                android:textColor="#000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/player2_sets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:text="@string/blank_score"
                android:textColor="@color/scoreColor"
                android:textSize="36sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:paddingTop="8dp"
                android:text="@string/games"
                android:textColor="#000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/player2_games"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:text="@string/blank_score"
                android:textColor="@color/scoreColor"
                android:textSize="36sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:paddingTop="8dp"
                android:text="@string/points"
                android:textColor="#000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/player2_points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:text="@string/blank_score"
                android:textColor="@color/scoreColor"
                android:textSize="36sp" />

            <Button
                android:id="@+id/player2_add_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:onClick="addPointForPlayer2"
                android:text="@string/won_point" />

            <Button
                android:id="@+id/player2_undo_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:onClick="removePointFromPlayer2"
                android:text="@string/undo_point" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="12dp"
        android:onClick="startNewGame"
        android:text="@string/reset" />

    <TextView
        android:id="@+id/winner_is"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/scoring_layout"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/winner"
        android:textColor="@color/scoreColor"
        android:textSize="24sp"
        android:visibility="visible" />
</RelativeLayout>